# n2p2

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindMKL.cmake
src/libs/: CMakeLists.txt
src/libs/libnnp/: version.h
